[package]
name = "async_httpc"
version = "0.2.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
percent-encoding = "2.1"
reqwest = { version = "0.11", features = ["native-tls", "rustls-tls", "cookies", "deflate", "gzip", "brotli", "json", "socks", "multipart"] }
bytes = { version = "1.0", features = ["serde"]}
flume = "0.10"
lazy_static = "1.4"
pi_async = "0.1"
pi_hash = "0.1"

[dev-dependencies]
env_logger = "0.7"
tcp = { path = "../../pi_net/tcp" }
http = { path = "../../pi_net/http" }