[package]
name = "async_httpc"
version = "0.3.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[features]
default = ["reqwest/native-tls", "reqwest/rustls-tls", "reqwest/cookies", "reqwest/deflate", "reqwest/gzip", "reqwest/brotli", "reqwest/json", "reqwest/socks", "reqwest/multipart"]
frontend = ["reqwest/native-tls", "reqwest/native-tls-alpn", "reqwest/rustls-tls", "reqwest/cookies", "reqwest/deflate", "reqwest/gzip", "reqwest/json", "reqwest/socks", "reqwest/multipart"]
not_compression = ["reqwest/native-tls", "reqwest/rustls-tls", "reqwest/cookies", "reqwest/json", "reqwest/socks", "reqwest/multipart"]
not_compression_frontend = ["reqwest/native-tls", "reqwest/native-tls-alpn", "reqwest/rustls-tls", "reqwest/cookies", "reqwest/json", "reqwest/socks", "reqwest/multipart"]

[dependencies]
tokio = { version = "1", features = ["full"] }
percent-encoding = "2.1"
reqwest = { version = "0.11", optional = true }
bytes = { version = "1.0", features = ["serde"]}
flume = "0.10"
lazy_static = "1.4"
pi_async = "0.5"
pi_hash = "0.1"

[dev-dependencies]
env_logger = "0.7"
tcp = { path = "../../pi_net/tcp" }
http = { path = "../../pi_net/http" }