[package]
name = "async_wsc"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
futures = "0.3"
ws = "0.9"
url = "2.1"
lazy_static = "1.4"
parking_lot = "0.11"
async = { path = "../../pi_lib/async" }

[dev-dependencies]
env_logger = "0.7"
tcp = { path = "../../pi_net/tcp" }
wss = { package = "ws", path = "../../pi_net/ws" }