[package]
name = "async_wsc"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
futures = "0.3"
futures-util = "0.3"
flume = "0.10"
bytes = "1.0"
webpki = "0.22"
rustls = { version = "0.20", features = ["dangerous_configuration", "tls12"] }
actix-rt = "2.1"
actix-codec = "0.5"
actix-http = "3.0"
awc = { path = "../../awc", features = ["rustls"] }
ws = "0.9"
url = "2.1"
lazy_static = "1.4"
parking_lot = "0.11"
log = "0.4"
pi_async = "0.1"
bytestring = "1.0"

[dev-dependencies]
env_logger = "0.7"
crossbeam-channel = "0.5"
tcp = { path = "../../pi_net/tcp" }
wss = { package = "ws", path = "../../pi_net/ws" }