[package]
name = "blocking_udp"
version = "0.1.1"
edition = "2018"

[dependencies]
futures = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"
dashmap = "4.0"
socket2 = "0.5"
bytes = "1.3"
fnv = "1.0"
lazy_static = "1.4"
log = "0.4"
pi_slotmap = "0.1"
pi_hash = "0.1"
pi_async = "0.5"
async-channel = "1.8"
udp = { path = "../udp" }

[dev-dependencies]
env_logger = "0.9"
