[package]
name = "blocking_udp"
version = "0.2.0"
edition = "2018"

[dependencies]
futures = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"
dashmap = "5.5"
socket2 = "0.5"
bytes = "1.4"
fnv = "1.0"
lazy_static = "1.4"
log = "0.4"
pi_slotmap = "0.1"
pi_hash = "0.1"
pi-async-rt = "0.1"
async-channel = "1.8"

[dev-dependencies]
env_logger = "0.9"
