[package]
name = "http"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
mio = "0.6"
url = "2.1"
mime = "0.3"
mime_guess = "2.0"
twoway = "0.2"
https = { package = "http", version = "0.2" }
httparse = "1.3"
httpdate = "0.3"
serde_json = "1.0"
futures = "0.3"
parking_lot = "0.11"
crossbeam-channel = "0.5"
regex = "1.3"
base64 = "0.10"
flate2 = "1.0"
bytes = "1.0"
atom = { path = "../../pi_lib/atom" }
path-absolutize = "1.1"
log = "0.4"
env_logger = "0.7"
tcp = { path = "../tcp" }
handler = { path = "../../pi_lib/handler" }
hash = { path = "../../pi_lib/hash", features = ["xxhash"] }
gray = { path = "../../pi_lib/gray" }
adler32 = { path = "../../pi_lib/adler32" }
async_file = { path = "../../pi_lib/async_file" }
async = { path = "../../pi_lib/async" }

[dev-dependencies]
route-recognizer = "0.1"