[package]
name = "http"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
mio = "0.6"
url = "2.1"
mime = "0.3"
mime_guess = "2.0"
twoway = "0.2"
https = { package = "http", version = "0.2" }
httparse = "1.3"
httpdate = "0.3"
serde_json = "1.0"
futures = "0.3"
parking_lot = "0.11"
crossbeam-channel = "0.5"
regex = "1.3"
base64 = "0.10"
flate2 = "1.0"
bytes = "1.0"
pi_atom = "0.1"
path-absolutize = "1.1"
log = "0.4"
env_logger = "0.7"
tcp = { path = "../tcp" }
pi_handler = "0.1"
pi_hash = { version = "0.1", features = ["xxhash"] }
pi_gray = "0.1"
pi_adler32 = "0.1"
pi_async_file = "0.1"
pi_async = "0.2"

[dev-dependencies]
route-recognizer = "0.1"