[package]
name = "http"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
mio = "0.8"
url = "2.2"
mime = "0.3"
mime_guess = "2.0"
twoway = "0.2"
https = { package = "http", version = "0.2" }
httparse = "=1.7.1"
httpdate = "1.0"
serde_json = "1.0"
futures = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"
regex = "1.6"
base64 = "0.13"
flate2 = "1.0"
brotli = "3.3"
bytes = "1.2"
pi_atom = "0.1"
path-absolutize = "3.0"
flume = "0.10"
log = "0.4"
pi_async = "0.5"
pi_async_buffer = "0.6"
pi_async_file = "0.4"
pi_handler = "0.1"
pi_hash = { version = "0.1", features = ["xxhash"] }
pi_gray = "0.1"
pi_adler32 = "0.1"
tcp = { package = "new_tcp", path = "../new_tcp" }

[dev-dependencies]
route-recognizer = "0.3"
env_logger = "0.9"