[package]
name = "https"
version = "0.1.0"
authors = ["zuon <dev@dev.com>"]

[dependencies.multipart]
default-features = false
features = ["server"]
version = "0.15"

[dependencies]
num = "*"
serde = "1.0"
serde_json = "1.0"
npnc = "*"
futures = "0.1.23"
hyper = "0.12.8"
url = "1.7.1"
http = "0.1.10"
mime = "0.3"
mime_guess = "2.0.0-alpha.5"
modifier = "0.1"
plugin = "0.2"
typemap = "0.3.3"
sequence_trie = "*"
time = "*"
filetime = "*"
tempdir = "*"
void = "*"
twoway= "*"
path-absolutize = "*"
rustls = "0.14.0"
tokio-rustls = "0.8.1"
tokio-tcp = "0.1.3"

atom = { path = "../../pi_lib/atom" }
file = { path = "../../pi_lib/file" }
worker = { path = "../../pi_lib/worker" }
future = { path = "../../pi_lib/future" }

[dev-dependencies]
serde_derive = "1.0"
