[package]
name = "mqtt"
version = "0.2.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
fnv = "1.0"
futures = "0.3"
mio = "0.8"
mqtt311 = "0.2"
parking_lot = "0.12"
lazy_static = "1.4"
pi_hash = { version = "0.1", features = ["xxhash"] }
tcp = { package = "new_tcp", path = "../new_tcp" }
ws = { path = "../ws" }
udp = { path = "../blocking_udp", package = "blocking_udp" }
quic = { path = "../quic" }
quinn-proto = "0.8"
bytes = "1.4"
log = "0.4"
pi_atom = "0.2"

[dev-dependencies]
pi-async-rt = "0.1"
twox-hash = "1.5"
env_logger = "0.9"