[package]
name = "net"
version = "0.1.0"
authors = ["moyy <moyy@yineng.com>"]

[dependencies]
mio = "0.6.14"
slab = "0.4.0"
mio-extras = "2.0.5"
byteorder = "1.0"
bitflags = "0.9"
rand = "0.3"
# http = {path="../http"}
httparse = "1.3.2"
hyper = "^0.10.6"
pi_lib = {path="../../pi_lib"}
websocket = "0.20.2"
# websocket = {path="../../rust-websocket"}
# websocket = {path="../websocket"}
sha1 = "0.2"
base64 = "0.5"

[[test]]
name = "test"
path = "test/mod.rs"