[package]
name = "net"
version = "0.1.0"
authors = ["moyy <moyy@yineng.com>"]

[dependencies]
mio = "0.6.16"
slab = "0.4.0"
mio-extras = "2.0.5"
byteorder = "1.0"
bitflags = "0.9"
rand = "0.3"
# http = {path="../http"}
httparse = "1.3.2"
hyper = "^0.10.6"
atom = {path="../../pi_lib/atom"}
gray = {path="../../pi_lib/gray"}
websocket = "0.20.4"
# websocket = {path="../../rust-websocket"}
# websocket = {path="../websocket"}
sha1 = "0.2"
rustls = "0.14.0"
fnv = "1.0.6"
base64 = "0.5"
vecio = "0.1.0"


[[test]]
name = "test"
path = "test/mod.rs"