[package]
name = "nodec"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]

[dependencies.base64]
version = "0.9"

[dependencies.bytes]
version = "0.4"

[dependencies.futures]
version = "0.1"

[dependencies.httparse]
version = "1"

[dependencies.native-tls]
version = "0.1"
optional = true

[dependencies.openssl]
version = "0.10"
optional = true

[dependencies.rand]
version = "0.5"

[dependencies.sha1]
version = "0.6"

[dependencies.tokio-codec]
version = "0.1"

[dependencies.tokio-io]
version = "0.1"

[dependencies.tokio-openssl]
version = "0.2"
optional = true

[dependencies.tokio-tcp]
version = "0.1"

[dependencies.tokio-tls]
version = "0.1"
optional = true

[dependencies.url]
version = "1"

[dependencies.websocket-codec]
version = "0.1"
[dev-dependencies.structopt]
version = "0.2"

[dev-dependencies.tokio-core]
version = "0.1"

[dev-dependencies.tokio-timer]
version = "0.2"

[features]
default = ["ssl-native-tls"]
nightly = []
ssl-native-tls = ["native-tls", "tokio-tls"]
ssl-openssl = ["openssl", "tokio-openssl"]

[dependencies]
lazy_static = "1.3"
worker = { path = "../../pi_lib/worker" }
apm = { path = "../../pi_lib/apm" }
atom = { path = "../../pi_lib/atom" }
timer = { path = "../../pi_lib/timer" }
compress = { path ="../../pi_lib/compress" }
mqtt311 = "0.2"