[package]
name = "quic"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3"
quinn-proto = { path = "../../../git/quinn/quinn-proto" }
pi_async = "0.5"
rustls = "0.20"
rustls-pemfile = "1.0"
bytes = "1.2"
crossbeam-channel = "0.5"
pi_hash = "0.1"
dashmap = "4.0"
log = "0.4"
udp = { path = "../udp" }
pi_cancel_timer = "0.2"
slotmap = "1.0"
flume = "0.10"

[dev-dependencies]
rcgen = "0.10"
tokio = { version = "1.21", features = ["full"] }
quinn = { path = "../../../git/quinn/quinn" }
env_logger = "0.9"