[package]
name = "quic"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3"
quinn-proto = "0.8"
pi_async = "0.5"
rustls = "0.20"
rustls-pemfile = "1.0"
bytes = "1.3"
crossbeam-channel = "0.5"
pi_hash = "0.1"
dashmap = "4.0"
log = "0.4"
udp = { path = "../udp" }
pi_cancel_timer = "0.2"
slotmap = "1.0"
flume = "0.10"

[dev-dependencies]
rcgen = "0.10"
tokio = { version = "1.21", features = ["full"] }
quinn = "0.8"
env_logger = "0.9"