[package]
name = "quic"
version = "0.2.0"
authors = ["vmos <vmosone007@gmail.com>"]
edition = "2018"
description = "Quic client/server"
repository = "https://github.com/pi-revolution/pi-quic"
license = "MIT OR Apache-2.0"
keywords = ["pi", "quic"]

[dependencies]
futures = "0.3"
parking_lot = "0.12"
quinn-proto = "0.8"
pi_async = "0.5"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
bytes = "1.3"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
pi_hash = "0.1"
dashmap = "4.0"
log = "0.4"
udp = { path = "../blocking_udp", package = "blocking_udp" }
pi_cancel_timer = "0.2"
slotmap = "1.0"
flume = "0.10"
tracing = "0.1"

[dev-dependencies]
rcgen = "0.10"
tokio = { version = "1.21", features = ["full"] }
quinn = "0.8"
ed25519-dalek = "1.0"
x509-parser = { version = "0.15", features = ["verify"] }
pem = "2.0"
der-parser = "8.2"
env_logger = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"