[package]
name = "rpc"
version = "0.1.0"
authors = ["moyy <moyy@yineng.com>"]

[dependencies]
fnv = "1.0.6"
net = {path="../net"}
mqtt = {path="../mqtt"}
mqtt3 = { git = "https://github.com/tekjar/mqtt3" }
atom = {path="../../pi_lib/atom"}
handler = {path="../../pi_lib/handler"}
gray = {path="../../pi_lib/gray"}
compress = { path = "../../pi_lib/compress"}
