[package]
name = "rpc"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
bytes = "0.4"
pi_handler = "0.1"
pi_gray = "0.1"
pi_atom = "0.1"
pi_compress = "0.1"
tcp = { path = "../tcp" }
ws = { path = "../ws" }
mqtt = { path = "../mqtt" }
base = { path = "../base" }
log = "0.4"