[package]
name = "tcp"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
mio = "0.6"
slab = "0.4"
lazy_static = "1.3"
atom = { path = "../../pi_lib/atom" }
local_timer = { path = "../../pi_lib/local_timer" }
rustls = "0.16"
crossbeam-channel = "0.5"
iovec = "0.1"
apm = { path = "../../pi_lib/apm" }
fnv = "1.0"
async = { path = "../../pi_lib/async" }
futures = "0.3"
log = "0.4"
hash = { path = "../../pi_lib/hash" }
parking_lot = "0.11"