[package]
name = "ws"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
http = "0.1"
httparse = "1.3"
futures = "0.3"
base64 = "0.10"
bytes = "0.4"
fnv = "1.0"
mio = "0.6"
log = "0.4"
atom = { path = "../../pi_lib/atom" }
tcp = { path = "../tcp" }
pi_crypto = { path = "../../pi_crypto" }
