[package]
name = "ws"
version = "0.3.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
http = "0.2"
httparse = "=1.7.1"
futures = "0.3"
base64 = "0.13"
bytes = "1.4"
fnv = "1.0"
mio = "0.8"
log = "0.4"
pi_async_buffer = "0.7"
pi_atom = "0.2"
tcp = { package = "new_tcp", path = "../new_tcp" }
pi_crypto = { path = "../../pi_crypto" }

[dev-dependencies]
pi-async-rt = "0.1"
env_logger = "0.9"

