[package]
name = "pi_async_httpc"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2021"
description = "pi_async_httpc"
repository = "https://github.com/GaiaWorld/pi_net"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async_httpc"]

[features]
default = ["reqwest/native-tls", "reqwest/rustls-tls", "reqwest/cookies", "reqwest/deflate", "reqwest/gzip", "reqwest/brotli", "reqwest/json", "reqwest/socks", "reqwest/multipart"]
frontend = ["reqwest/native-tls", "reqwest/native-tls-alpn", "reqwest/rustls-tls", "reqwest/cookies", "reqwest/deflate", "reqwest/gzip", "reqwest/json", "reqwest/socks", "reqwest/multipart"]
not_compression = ["reqwest/native-tls", "reqwest/rustls-tls", "reqwest/cookies", "reqwest/json", "reqwest/socks", "reqwest/multipart"]
not_compression_frontend = ["reqwest/native-tls", "reqwest/native-tls-alpn", "reqwest/rustls-tls", "reqwest/cookies", "reqwest/json", "reqwest/socks", "reqwest/multipart"]

[dependencies]
tokio = { version = "1", features = ["full"] }
percent-encoding = "2.1"
reqwest = { version = "0.11", optional = true }
bytes = { version = "1.0", features = ["serde"]}
flume = "0.10"
lazy_static = "1.4"
pi_async = "0.5.11"
pi_hash = "0.1"

[dev-dependencies]
env_logger = "0.7"
futures = "0.3"
pi_tcp = {version = "0.1", path = "../tcp" }
pi_http = {version = "0.1", path = "../http" }
https = {package = "http", version = "0.2" }
pi_handler = "0.1"
pi_hash = "0.1"
pi_gray = "0.1"
pi_atom = "0.1"