[package]
name = "pi_async_wsc"
version = "0.2.2"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2021"
description = "pi_async_wsc"
repository = "https://github.com/GaiaWorld/pi_net/tree/crateio"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async_wsc"]

[dependencies]
futures = "0.3"
futures-util = "0.3"
flume = "0.10"
bytes = "1.4"
webpki = "0.22"
rustls = { version = "0.20", features = ["dangerous_configuration", "tls12"] }
actix-rt = "2.1"
actix-codec = "0.5"
actix-http = "3.0"
awc = {version = "0.1", package = "pi_awc", path = "../awc", features = ["rustls"] }
tcp = {version = "0.3", package = "pi_tcp", path = "../tcp" }
ws = "0.9"
url = "2.1"
lazy_static = "1.4"
parking_lot = "0.12"
log = "0.4"
pi-async-rt = "0.1"
bytestring = "1.0"

[dev-dependencies]
env_logger = "0.7"
crossbeam-channel = "0.5"
wss = { package = "pi_ws", version = "0.3", path = "../ws" }