[package]
name = "pi_dns_resolver"
version = "0.1.0"
edition = "2021"
description = "Provides related functions for asynchronous domain name resolution"
repository = "https://github.com/GaiaWorld/pi_net/tree/master/dns_resolver"
license = "MIT OR Apache-2.0"
keywords = ["pi",  "dns", "resolver"]

[dependencies]
hickory-proto = "~0.24"
hickory-resolver = "~0.24"