[package]
name = "pi_dns_resolver"
version = "0.2.1"
edition = "2021"
description = "Provides related functions for asynchronous domain name resolution"
repository = "https://github.com/GaiaWorld/pi_net/tree/master/dns_resolver"
license = "MIT OR Apache-2.0"
keywords = ["pi",  "dns", "resolver"]

[dependencies]
dashmap = "~6.0"
pi-async-rt = "~0.1"
hickory-proto = "~0.24"
hickory-resolver = "~0.24"

[dev-dependencies]
crossbeam-channel = "~0.5"