[package]
name = "pi_mqtt"
version = "0.2.3"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2021"
description = "pi_mqtt"
repository = "https://github.com/GaiaWorld/pi_net/tree/crateio"
license = "MIT OR Apache-2.0"
keywords = ["pi", "mqtt"]

[dependencies]
fnv = "1.0"
futures = "0.3"
mio = "0.8"
mqtt311 = "0.2"
parking_lot = "0.12"
lazy_static = "1.4"
dashmap = "~5.5"
pi_hash = { version = "0.1", features = ["xxhash"] }
tcp = {version = "0.3", path = "../tcp", package = "pi_tcp" }
ws = {version = "0.3", path = "../ws", package = "pi_ws" }
udp = {version = "0.2", path = "../blocking_udp", package = "pi_blocking_udp"}
quic = {version = "0.6", path = "../quic", package = "pi_quic" }
quinn-proto = "0.8"
bytes = "1.4"
log = "0.4"
pi_atom = "0.5"

[dev-dependencies]
pi-async-rt = "0.1"
twox-hash = "1.5"
env_logger = "0.9"
