[package]
name = "pi_mqtt_proxy"
version = "0.1.1"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2021"
description = "pi_mqtt_proxy"
repository = "https://github.com/GaiaWorld/pi_net"
license = "MIT OR Apache-2.0"
keywords = ["pi", "mqtt_proxy"]

[dependencies]
futures = "0.3"
tcp = {version = "0.1", path = "../tcp", package = "pi_tcp" }
quic = {version = "0.1", path = "../quic", package = "pi_quic" }
mqtt = {version = "0.1", path = "../mqtt", package = "pi_mqtt" }
pi_async = "0.5"
pi_handler = "0.1"
pi_gray = "0.1"
pi_atom = "0.2"
log = "0.4"

[dev-dependencies]
ws = {version = "0.1", path = "../ws", package = "pi_ws" }
env_logger = "0.9"
udp = {version = "0.1", path = "../blocking_udp", package = "pi_blocking_udp" }
