[package]
name = "pi_udp"
version = "0.1.0"
edition = "2021"
description = "pi_udp"
repository = "https://github.com/GaiaWorld/pi_udp"
license = "MIT OR Apache-2.0"
keywords = ["pi",  "udp"]

[dependencies]
futures = "0.3"
mio = { version = "0.8", features = ["net", "os-poll"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
dashmap = "4.0"
bytes = "1.3"
fnv = "1.0"
lazy_static = "1.4"
log = "0.4"
pi_slotmap = "0.1"
pi_hash = "0.1"
pi_async = "0.5"
flume = "0.10"
spin_sleep = "1.1"

[dev-dependencies]
env_logger = "0.9"