[package]
name = "pi_ws"
version = "0.2.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[dependencies]
http = "0.2"
httparse = "=1.7.1"
futures = "0.3"
base64 = "0.13"
bytes = "1.2"
fnv = "1.0"
mio = "0.8"
log = "0.4"
pi_async_buffer = "0.6"
pi_atom = "0.1"
tcp = { path = "../tcp", package = "pi_tcp" }
pi_crypto = "0.1"

[dev-dependencies]
pi_async = "0.5"
env_logger = "0.9"

